Fix positions of search suggestion boxes

--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -138,10 +138,10 @@ $main-color: #9B9A9B;
 
       autocomplete {
         position: absolute;
-        top: 45px;
-        left: 0;
+        top: 42px;
+        left: -46px;
         z-index: 5;
-        width: 210px;
+        width: 240px;
         max-height: 230px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         overflow: auto;
