--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -31,6 +31,8 @@ $border-color: rgba(0, 0, 0, 0.2);
           position: absolute;
           z-index: 5;
           max-width: 350px;
+          min-width: 210px;
+          top: 55px;
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         }
       }
