Notifications look and feel redesign - work in progress.

--- a/src/app/navigation/alerts-quick/alerts-quick.component.scss
+++ b/src/app/navigation/alerts-quick/alerts-quick.component.scss
@@ -21,11 +21,12 @@ alert-component {
     }
 
     mat-icon {
+      margin-top: -14px;
       margin-left: auto;
       color: #FD90A5;
-      height: 28px;
-      width: 28px;
-      font-size: 28px;
+      height: 23px;
+      width: 33px;
+      font-size: 36px;
       cursor: pointer;
     }
   }
