--- a/src/app/pages/search-page/entity-list/entity-list.component.scss
+++ b/src/app/pages/search-page/entity-list/entity-list.component.scss
@@ -9,44 +9,40 @@
   }
 
   &__item {
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
     padding: 15px;
     cursor: pointer;
+    display: flex;
+    align-items: flex-start;
 
     &:hover {
-      background: rgba(0, 0, 0, 0.05);
+      background: #E3F6FE;
     }
 
     &__title {
-      color: #4089E0;
-      font-size: 18px;
+      font-size: 16px;
+      margin-bottom: 10px;
+      color: rgba(0,0,0,0.85);
     }
 
     &__subtitle {
-      margin-bottom: 10px;
-      font-size: 14px;
-      color: rgba(0, 0, 0, 0.7);
+      font-size: 12px;
+      color: rgba(0, 0, 0, 0.6);
       text-transform: capitalize;
     }
 
-    &__fields {
-      display: flex;
-      flex-wrap: wrap;
-      font-size: 13px;
-      color: rgba(0, 0, 0, 0.5);
-
-      &__single {
-        margin: 5px 20px 5px 0;
-      }
-
-      &__key {
-
-      }
-
-      &__value {
-
-      }
+    &__date {
+      font-size: 12px;
+      color: rgba(0,0,0,0.6);
     }
 
+    &__type {
+      margin-left: auto;
+      margin-right: 20px;
+      padding: 3px 10px;
+      background: rgba(0,0,0,0.35);
+      color: white;
+      border-radius: 8px;
+      font-size: 12px;
+    }
   }
 }
