--- a/src/app/pages/search-page/search-loader/search-loader.component.html
+++ b/src/app/pages/search-page/search-loader/search-loader.component.html
@@ -1,17 +1,13 @@
 <div class="search-loader">
 
-  <div class="search-loader__pagination">
-    <div></div>
-  </div>
-
   <div *ngFor="let item of items" class="search-loader__item">
-    <div class="search-loader__item__title"></div>
-    <div class="search-loader__item__type"></div>
-    <div class="search-loader__item__content"></div>
-  </div>
+    <div>
+      <div class="search-loader__item__title"></div>
+      <div class="search-loader__item__subtitle"></div>
+    </div>
 
-  <div class="search-loader__pagination search-loader__pagination--last">
-    <div></div>
+    <div class="search-loader__item__type"></div>
+    <div class="search-loader__item__date"></div>
   </div>
 
 </div>
