--- a/src/app/pages/search-page/search-loader/search-loader.component.scss
+++ b/src/app/pages/search-page/search-loader/search-loader.component.scss
@@ -1,40 +1,32 @@
 .search-loader {
-  &__pagination {
+  &__item {
+    padding: 15px;
     display: flex;
 
-    &--last {
-      border-top: 1px solid rgba(0, 0, 0, 0.2);
-    }
-
-    div {
-      margin: 10px 10px 10px auto;
-      width: 280px;
-      height: 20px;
+    &__title {
+      margin-bottom: 10px;
+      width: 200px;
+      height: 18px;
       background: rgba(0,0,0,0.12);
     }
-  }
 
-  &__item {
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 15px;
-
-    &__title {
-      margin-bottom: 5px;
-      width: 200px;
-      height: 20px;
+    &__subtitle {
+      width: 100px;
+      height: 13px;
       background: rgba(0,0,0,0.12);
     }
 
     &__type {
-      margin-bottom: 15px;
-      width: 70px;
-      height: 16px;
+      margin-left: auto;
+      margin-right: 20px;
+      width: 100px;
+      height: 20px;
       background: rgba(0,0,0,0.12);
     }
 
-    &__content {
-      width: 100%;
-      height: 25px;
+    &__date {
+      width: 50px;
+      height: 15px;
       background: rgba(0,0,0,0.12);
     }
   }
