Update translation key names for notifications.

--- a/src/app/navigation/notifications-quick/notifications-quick.component.html
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.html
@@ -1,8 +1,8 @@
 <div class="notifications-list">
   <div class="notifications-list__topnav">
-    <span>{{'ALLNOTIFICATIONS_TITLE' | translate}}</span>
+    <span>{{'NOTIFICATIONSQUICK_VIEWALL' | translate}}</span>
     <div class="notifications-list__topnav__options">
-    <span>{{'MARKALLASREAD_TITLE' | translate}}</span>
+    <span>{{'NOTIFICATIONSQUICK_MARKALLASREAD' | translate}}</span>
     </div>
     <div class="notifications-list__topnav__options">
       <mat-icon (click)="navigateToSettings()">settings</mat-icon>
